Stop ignoring index.html and handle window resizing

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Ulam Spiral</title>
     <style>
       html, body{
+        height: 100%;
         padding: 0px;
         margin: 0px;
+      }
+
+      #canvas {
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
